--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,6 @@ logs.log.lck
 phase-2/jfxtras-styles-11.6.15.zip
 phase-1/logs.log
 phase-1/logs.log.lck
+phase-1/app/logs.log
+phase-1/app/logs.log.lck
 phase-1/app/target
