--- a/phase-2/shweeter/pom.xml
+++ b/phase-2/shweeter/pom.xml
@@ -19,6 +19,13 @@
     <dependencies>
 
         <dependency>
+            <groupId>org.fxmisc.richtext</groupId>
+            <artifactId>richtextfx</artifactId>
+            <version>0.10.9</version>
+        </dependency>
+
+
+        <dependency>
             <groupId>com.jfxtras</groupId>
             <artifactId>jmetro</artifactId>
             <version>11.6.15</version>
