--- a/phase-2/shweeter/pom.xml
+++ b/phase-2/shweeter/pom.xml
@@ -19,6 +19,14 @@
     <dependencies>
 
         <dependency>
+            <groupId>org.controlsfx</groupId>
+            <artifactId>controlsfx</artifactId>
+            <version>11.1.1</version>
+        </dependency>
+
+
+
+        <dependency>
             <groupId>org.fxmisc.richtext</groupId>
             <artifactId>richtextfx</artifactId>
             <version>0.10.9</version>
