--- a/phase-1/app/pom.xml
+++ b/phase-1/app/pom.xml
@@ -51,6 +51,23 @@
       <artifactId>log4j-core</artifactId>
       <version>2.17.2</version>
     </dependency>
+
+    <!-- sql dependencies-->
+    <!-- <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <scope>system</scope>
+      <version>8.0.29</version>
+      <systemPath>${project.basedir}/mysql-connector-java-5.1.46.jar</systemPath>
+    </dependency> -->
+    <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>8.0.29</version>
+    </dependency>
+
+
   </dependencies>
 
   <build>
