--- a/phase-1/app/pom.xml
+++ b/phase-1/app/pom.xml
@@ -66,7 +66,20 @@
       <artifactId>mysql-connector-java</artifactId>
       <version>8.0.29</version>
     </dependency>
-
+    <dependency>
+      <groupId>mysql-bin</groupId>
+      <artifactId>mysql-connector-java-bin</artifactId>
+      <scope>system</scope>
+      <version>8.0.29</version>
+      <systemPath>${project.basedir}/mysql-connector-java-5.1.46-bin.jar</systemPath>
+    </dependency>
+    <dependency>
+      <groupId>sqlite</groupId>
+      <artifactId>sqlite-jbdc</artifactId>
+      <scope>system</scope>
+      <version>8.0.29</version>
+      <systemPath>${project.basedir}/sqlite-jdbc-3.20.0.jar</systemPath>
+    </dependency>
 
   </dependencies>
 
