--- a/phase-1/app/pom.xml
+++ b/phase-1/app/pom.xml
@@ -80,12 +80,18 @@
       <version>8.0.29</version>
       <systemPath>${project.basedir}/sqlite-jdbc-3.20.0.jar</systemPath>
     </dependency>
-    <!-- https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc
-    <dependency>
-      <groupId>org.xerial</groupId>
-      <artifactId>sqlite-jdbc</artifactId>
-      <version>3.36.0.3</version>
-    </dependency> -->
+      <dependency>
+          <groupId>org.telegram</groupId>
+          <artifactId>telegrambots</artifactId>
+          <version>6.1.0</version>
+          <scope>compile</scope>
+      </dependency>
+      <!-- https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc
+      <dependency>
+        <groupId>org.xerial</groupId>
+        <artifactId>sqlite-jdbc</artifactId>
+        <version>3.36.0.3</version>
+      </dependency> -->
 
 
   </dependencies>
