--- a/phase-2/shweeter/pom.xml
+++ b/phase-2/shweeter/pom.xml
@@ -21,7 +21,14 @@
         </repository>
     </repositories>
     <dependencies>
-        
+
+        <dependency>
+            <groupId>io.github.cdimascio</groupId>
+            <artifactId>java-dotenv</artifactId>
+            <version>5.2.2</version>
+        </dependency>
+
+
         <dependency>
             <groupId>org.telegram</groupId>
             <artifactId>telegrambots</artifactId>
