added editing and fixed logger

--- a/phase-2/shweeter/pom.xml
+++ b/phase-2/shweeter/pom.xml
@@ -23,6 +23,12 @@
     <dependencies>
 
         <dependency>
+            <groupId>com.github.sarxos</groupId>
+            <artifactId>webcam-capture</artifactId>
+            <version>0.3.12</version>
+        </dependency>
+        
+        <dependency>
             <groupId>io.github.cdimascio</groupId>
             <artifactId>java-dotenv</artifactId>
             <version>5.2.2</version>
