--- a/phase-1/app/pom.xml
+++ b/phase-1/app/pom.xml
@@ -28,6 +28,12 @@
     </dependency>
 
     <dependency>
+      <groupId>io.github.cdimascio</groupId>
+      <artifactId>java-dotenv</artifactId>
+      <version>5.2.2</version>
+    </dependency>
+
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.11</version>
@@ -88,13 +94,13 @@
       <version>8.0.29</version>
       <systemPath>${project.basedir}/sqlite-jdbc-3.20.0.jar</systemPath>
     </dependency>
-      <dependency>
-          <groupId>org.telegram</groupId>
-          <artifactId>telegrambots</artifactId>
-          <version>6.1.0</version>
-          <scope>compile</scope>
-      </dependency>
-      <!-- https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc
+    <dependency>
+      <groupId>org.telegram</groupId>
+      <artifactId>telegrambots</artifactId>
+      <version>6.1.0</version>
+      <scope>compile</scope>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc
       <dependency>
         <groupId>org.xerial</groupId>
         <artifactId>sqlite-jdbc</artifactId>
@@ -149,15 +155,15 @@
         </plugin>
       </plugins>
     </pluginManagement>
-      <plugins>
-          <plugin>
-              <groupId>org.apache.maven.plugins</groupId>
-              <artifactId>maven-compiler-plugin</artifactId>
-              <configuration>
-                  <source>16</source>
-                  <target>16</target>
-              </configuration>
-          </plugin>
-      </plugins>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>16</source>
+          <target>16</target>
+        </configuration>
+      </plugin>
+    </plugins>
   </build>
 </project>
