--- a/server/pom.xml
+++ b/server/pom.xml
@@ -19,6 +19,11 @@
   </properties>
 
   <dependencies>
+    <dependency>
+      <groupId>io.github.cdimascio</groupId>
+      <artifactId>java-dotenv</artifactId>
+      <version>5.2.2</version>
+    </dependency>
     <!-- sql dependencies-->
     <dependency>
       <groupId>mysql</groupId>
